Improvement: Payment plan is created even though mb reference code fail